prost-reflect-derive/tests/missing_name.stderr
error: at least one of the 'message_name' or 'package_name' arguments is required
 --> tests/missing_name.rs:4:3
  |
4 | #[prost_reflect(file_descriptor = "FILE_DESCRIPTOR")]
  |   ^^^^^^^^^^^^^
